--- a/app/views/misc/home.html.erb
+++ b/app/views/misc/home.html.erb
@@ -9,9 +9,4 @@
   <li id="sfo" class="west">San Francisco</li>
 </ul>
 
-<script>
-  // Write your JS here.
-  // Open the JS console and refresh the page to see the output.
-
-  
-</script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
