testing $(document).ready method

--- a/app/views/misc/home.html.erb
+++ b/app/views/misc/home.html.erb
@@ -10,3 +10,13 @@
 </ul>
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+<script>
+  $(document).ready(function() {
+    $("body").on("click", "#hello", function() {
+      console.log("clicked!");
+    });
+  });
+</script>
+
+<div id="hello">Click here</div>
